--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="XRPL Invoice NFT Auction Platform - Tokenize and trade invoice financing with RLUSD stablecoin" />
-    <title>XRPL Invoice NFT Auction</title>
+    <meta name="description" content="RLFactor - XRPL Invoice NFT Auction Platform - Tokenize and trade invoice financing with RLUSD stablecoin" />
+    <title>RLFactor - XRPL Invoice Auction</title>
   </head>
   <body>
     <div id="root"></div>
